{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 189,
  "lineage": "c4201fc2-8033-bf32-6e63-0622e13d4495",
  "resources": [
    {
      "module": "module.ec2_primary",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0031a24a5d5c1edb7",
            "arn": "arn:aws:ec2:eu-west-2:888577058059:instance/i-041af0f0c66275ce9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041af0f0c66275ce9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7934cc45a925cbf",
            "private_dns": "ip-10-0-1-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_ip": "13.41.203.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9cd8474af19c21e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a861907816d8903",
            "tags": {
              "Name": "ec2-primary"
            },
            "tags_all": {
              "Name": "ec2-primary"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab090ccb73a36b33"
            ]
          },
          "dependencies": [
            "module.sg_primary.aws_security_group.web_sg",
            "module.vpc_primary.aws_subnet.public_a",
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:888577058059:security-group/sg-0ab090ccb73a36b33",
            "description": "Security group for primary_environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab090ccb73a36b33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "primary_environment-sg",
            "name_prefix": "",
            "owner_id": "888577058059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e92cbc6faddce037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888577058059:security-group/sg-0614c35210ac2bbee",
            "description": "Security group for secondary-environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0614c35210ac2bbee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secondary-environment-sg",
            "name_prefix": "",
            "owner_id": "888577058059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f8ddec15c77d94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:888577058059:internet-gateway/igw-0dac5aef2ae3c8540",
            "id": "igw-0dac5aef2ae3c8540",
            "owner_id": "888577058059",
            "vpc_id": "vpc-0e92cbc6faddce037"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dac5aef2ae3c8540",
            "id": "r-rtb-0506d8107130575a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0506d8107130575a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.igw",
            "module.vpc_primary.aws_route_table.rt",
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:888577058059:route-table/rtb-0506d8107130575a9",
            "id": "rtb-0506d8107130575a9",
            "owner_id": "888577058059",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e92cbc6faddce037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2d57d7ebc0d5580",
            "route_table_id": "rtb-0506d8107130575a9",
            "subnet_id": "subnet-06a861907816d8903"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.rt",
            "module.vpc_primary.aws_subnet.public_a",
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:888577058059:subnet/subnet-06a861907816d8903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a861907816d8903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577058059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-primary-public-subnet_a"
            },
            "tags_all": {
              "Name": "vpc-primary-public-subnet_a"
            },
            "vpc_id": "vpc-0e92cbc6faddce037"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:888577058059:vpc/vpc-0e92cbc6faddce037",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00371f1ab59904500",
            "default_route_table_id": "rtb-07749236febc1270e",
            "default_security_group_id": "sg-0d2f26e136dce9f15",
            "dhcp_options_id": "dopt-0ff982bf5656f9d0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e92cbc6faddce037",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07749236febc1270e",
            "owner_id": "888577058059",
            "tags": {
              "Name": "vpc-primary"
            },
            "tags_all": {
              "Name": "vpc-primary"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888577058059:internet-gateway/igw-06445a777b18603d7",
            "id": "igw-06445a777b18603d7",
            "owner_id": "888577058059",
            "vpc_id": "vpc-0c0f8ddec15c77d94"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06445a777b18603d7",
            "id": "r-rtb-0d13c94747c2476091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d13c94747c247609",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.igw",
            "module.vpc_secondary.aws_route_table.rt",
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888577058059:route-table/rtb-0d13c94747c247609",
            "id": "rtb-0d13c94747c247609",
            "owner_id": "888577058059",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0f8ddec15c77d94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f374612c3487401a",
            "route_table_id": "rtb-0d13c94747c247609",
            "subnet_id": "subnet-0d76876f5b1d1ecfa"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.rt",
            "module.vpc_secondary.aws_subnet.public_b",
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888577058059:subnet/subnet-0d76876f5b1d1ecfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d76876f5b1d1ecfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577058059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-secondary-public-subnet-b"
            },
            "tags_all": {
              "Name": "vpc-secondary-public-subnet-b"
            },
            "vpc_id": "vpc-0c0f8ddec15c77d94"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888577058059:vpc/vpc-0c0f8ddec15c77d94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fba27e46bb36ea74",
            "default_route_table_id": "rtb-0ffa4b16b97ede872",
            "default_security_group_id": "sg-04fdace23c39c625b",
            "dhcp_options_id": "dopt-06aab52b216d397d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0f8ddec15c77d94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffa4b16b97ede872",
            "owner_id": "888577058059",
            "tags": {
              "Name": "vpc-secondary"
            },
            "tags_all": {
              "Name": "vpc-secondary"
            }
          }
        }
      ]
    }
  ]
}